# Qt-Mpv

./: CMakeLists.txt  Qt-Mpv.pro  README.md
.github/workflows/: cmake.yml  qmake.yml
mac/: change_lib_dependencies.rb
src/: CMakeLists.txt  controlwidget.cc  controlwidget.hpp  main.cc  mainwindow.cc  mainwindow.hpp  mediainfo.hpp  mpvlogwindow.cc  mpvlogwindow.hpp  mpvopenglwidget.cc  mpvopenglwidget.hpp  mpvplayer.cc  mpvplayer.hpp  mpvwidget.cc  mpvwidget.hpp  playlistmodel.cpp  playlistmodel.h  playlistview.cc  playlistview.hpp  previewwidget.cc  previewwidget.hpp  qmediaplaylist.cpp  qmediaplaylist.h  qmediaplaylist_p.h  qplaylistfileparser.cpp  qthelper.hpp  src.pri  titlewidget.cc  trackinfo.cc  trackinfo.hpp
